[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,13 @@
 <html>
+    <head>
+        <title>
+            article-one Arun T T
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/"> home</a>
+            <hr>
+        </div>
+    </body>
 </html>
