--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,18 @@
         <div>
             <a href="/"> home</a>
             <hr>
+        <h1>
+            article-one
+        </h1>
+        </div>
+        <div>
+            oct 4 2016
+        </div>
+        <div>
+            This is the content for my first articleThis is the content for my first article
+            This is the content for my first articleThis is the content for my first article
+            This is the content for my first articleThis is the content for my first article
+            This is the content for my first articleThis is the content for my first article
         </div>
     </body>
 </html>
