--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="ui/2016-09-16 19.17.39.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am Arun.
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+        <script type="text/javascript" src="ui/2016-09-16 19.17.39.jpg">
         </script>
     </body>
 </html>
