[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <div class="center">
-            <img src="ui/arun.png" class="img-medium"/>
+            <img src="ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am Arun.
         </div>
-        <script type="text/javascript" src="ui/arun.png">
+        <script type="text/javascript" src="ui/madi.png">
         </script>
     </body>
 </html>
