--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
+            <marquee>
             Hi! I am Arun.
+            </marquee>
         </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
