--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/arun.png" class="img-medium"/ align=left>
+            <img src="/ui/arun.png" class="img-medium"/ align=right>
         </div>
         <br>
         <div class="center text-big bold">
