[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,12 +6,13 @@
     <body>
         <div class="center">
             <img src="/ui/arun.png" class="img-medium"/ align=right>
+            <h3>
+            Arun
+            </h3>
         </div>
         <br>
         <div class="center text-big bold">
-            <marquee>
-            Hi! I am Arun.
-            </marquee>
+           
         </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
