--- a/ui/index.html
+++ b/ui/index.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/arun.png" class="img-medium"/ align=right>
+            <img src="/ui/arun.png" class="img-medium" align=right>
             <h3>
-            Arun
+             Arun
             </h3>
-        </div>
+            </div>
         <br>
         <div class="center text-big bold">
-           
+         Arun  
         </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
