--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
             </div>
         <br>
         <div class="center text-big bold">
-            <h3>
+            <h3 align=right>
             Arun
             </h3>
         </div>
