[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,9 +14,9 @@
         <br>
         <br>
         <br>
-         <br>
         <br>
-        <div class="center text-big bold">
+        <br>
+        <div>
             <h3 align=right>
             Arun
             </h3>
