--- a/ui/index.html
+++ b/ui/index.html
@@ -4,22 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <font size=4>
         <div class="center">
             <img src="/ui/arun.png" class="img-medium" align=right>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <div>
-            <h3 align=right>
-            Arun
-            </h3>
+            <p>
+            aruntt4u@gmail.com<br>
+            9164282828<br>
+            </p>
         </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
