[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,5 +16,6 @@
         </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
+        </font>
     </body>
 </html>
