[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <h2>
+            RESUME
+        </h2>
         <font size=4>
         <div class="center">
             <img src="/ui/arun.png" class="img-medium" align=right>
