--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,13 @@
         </div>
         <div>
             <p>
+            Name: Arun
             aruntt4u@gmail.com<br>
             9164282828<br>
+            <br>
+            <br>
+            Gadag,Karnataka
+            
             </p>
         </div>
         <script type="text/javascript" src="/ui/arun.png">
