[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,13 +9,13 @@
         </h1>
         <font size=4>
         <div class="center">
-            <img src="/ui/arun.png" class="img-medium" align=right>
+            <img src="/ui/arun.png" class="img-small" align=right>
         </div>
         <div>
             <p>
             <br>
             <br>
-            Name: Arun
+            Name: Arun<br>
             aruntt4u@gmail.com<br>
             9164282828<br>
             <br>
