[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,6 +24,26 @@
             </p>
             <hr>
         </div>
+        <div>
+            <h2 align=left>
+            Summary    
+            </h2>
+            <P>
+                This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary. This is my summary.
+            </P>
+            <hr>
+        </div>
+        <div>
+            <h2 aligh=left>
+                Work Experience
+            </h2>
+            <p>
+                I work in my home and college. very difficult. Ha ha ha...... 
+                I work in my home and college. very difficult. Ha ha ha......
+                I work in my home and college. very difficult. Ha ha ha......
+                I work in my home and college. very difficult. Ha ha ha......    
+            </p>
+        </div>
         
         <script type="text/javascript" src="/ui/arun.png">
         </script>
