[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,6 +37,10 @@
             <h2 aligh=left>
                 Work Experience
             </h2>
+            <h3>
+                Student<br>
+                college and home
+            </h3>
             <p>
                 I work in my home and college. very difficult. Ha ha ha...... 
                 I work in my home and college. very difficult. Ha ha ha......
