--- a/ui/index.html
+++ b/ui/index.html
@@ -39,7 +39,7 @@
             </h2>
             <h3>
                 Student<br>
-                college and home
+                place: college and home
             </h3>
             <p>
                 I work in my home and college. very difficult. Ha ha ha...... 
