--- a/ui/index.html
+++ b/ui/index.html
@@ -41,12 +41,13 @@
                 Student<br>
                 place: college and home
             </h3>
-            <p>
-                I work in my home and college. very difficult. Ha ha ha...... 
-                I work in my home and college. very difficult. Ha ha ha......
-                I work in my home and college. very difficult. Ha ha ha......
-                I work in my home and college. very difficult. Ha ha ha......    
-            </p>
+            <p>I work in my home and college. very difficult. Ha ha ha......</p>
+            <dir>
+                <li></li>
+                <li>My school</li>
+                <li>My pu college</li>
+                <li>My engineering college </li>    
+            </dir>
         </div>
         
         <script type="text/javascript" src="/ui/arun.png">
