[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -42,12 +42,23 @@
                 place: college and home
             </h3>
             <p>I work in my home and college. very difficult. Ha ha ha......</p>
-        </div>
             <dir>
                 <li>My school</li>
                 <li>My pu college</li>
                 <li>My engineering college </li>    
             </dir>
+            </div>
+            <div>
+                <h2>
+                    Education
+                </h2>
+                <p>
+                    That's what i am doing.<br>
+                    learnt lot of things in my school<br>
+                    Studied a bit of science in pu college<br>
+                    not attended regular classes in engineering to learn modern application development<br> 
+                </p>
+            </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
     </body>
