[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -60,6 +60,16 @@
                     not attended regular classes in engineering to learn modern application development<br> 
                 </p>
             </div>
+            <div>
+                <h2>
+                    Additional Information
+                </h2>
+                <p>
+                    I dont't have much addition informational about me right now.<br>
+                    When i get those additional informations, i will definitely upload.
+                    That's all for now. thank u.
+                </p>
+            </div>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
     </body>
