--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
         </title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-<body>
+<body><img src="/ui/arun.png" class="img-small" align=right>
         <script type="text/javascript" src="/ui/arun.png">
         </script>
     </body>
