--- a/ui/index.html
+++ b/ui/index.html
@@ -6,8 +6,6 @@
         </title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-<body><img src="/ui/arun.png" class="img-small" align=right>
-        <script type="text/javascript" src="/ui/arun.png">
-        </script>
+<body><img src="/ui/arun.png" class="medium" align=right>
     </body>
     </html>
