--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,8 @@
         </title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-<body><img src="/ui/arun.png" class="medium" align=right>
+<body>
+    <img src="/ui/arun.png" class="medium">
+    <img src="/ui/madi.png" class="medium">
     </body>
     </html>
