--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
         </title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-<body>
+<body align=center>
     <img src="/ui/arun.png" class="medium">
     <img src="/ui/madi.png" class="medium">
     </body>
