[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,8 +6,10 @@
         </title>
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
-<body align=center>
+<body>
+    <p align=center>
     <img src="/ui/arun.png" class="medium">
     <img src="/ui/madi.png" class="medium">
+    </P>
     </body>
     </html>
