[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,5 +11,10 @@
     <img src="/ui/arun.png" class="medium">
     <img src="/ui/madi.png" class="medium">
     </P>
+    <hr>
+    <dir>
+    <li><a href="https://cloud.imad.hasura.io/article-one">article one</a></li>    
+     <li><a href="https://cloud.imad.hasura.io/article-two">article two</a></li>
+     </dir>
     </body>
     </html>
