--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,8 @@
     </P>
     <hr>
     <dir>
-    <li><a href="https://aruntt4u.imad.hasura.io/article-one">article one</a></li>    
-     <li><a href="https://aruntt4u.imad.hasura.io/article-two">article two</a></li>
+    <li><a href="http://aruntt4u.imad.hasura-app.io/article-one">article one</a></li>    
+     <li><a href="https://aruntt4u.imad.hasura-app.io/article-two">article two</a></li>
      </dir>
     </body>
     </html>
