[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
     <hr>
     <dir>
     <li><a href="http://aruntt4u.imad.hasura-app.io/article-one">article one</a></li>    
-     <li><a href="https://aruntt4u.imad.hasura-app.io/article-two">article two</a></li>
+     <li><a href="http://aruntt4u.imad.hasura-app.io/article-two">article two</a></li>
      </dir>
     </body>
     </html>
